test/good/cachapa-assignment.tajada
c es cachapa con queso o papelón.

{
        c⇒0 ≔ 4.
        c⇒1 ≔ 4·0.
}
