test/bad/cachapa-member-assignment.tajada
c es cachapa con queso o papelón.

{
        c⇒1 ≔ 4. ⫽ Error de tipos: no se puede asignar un queso a un papelón.
}
